Address problems with class support. Add styling to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
 <head>
   <title>Solar Age Calculator</title>
+  <meta charset="UTF-8">
   <!-- <img src="./assets/images/Photo name.jpg" alt="description"> -->
 </head>
 <body>
